--- a/package.json
+++ b/package.json
@@ -2,9 +2,39 @@
   "name": "ember-test-helpers-extra",
   "version": "0.1.0",
   "description": "Additional test helpers that build upon the primitives in @ember/test-helpers",
-  "main": "index.js",
+  "main": "lib/index.js",
   "repository": "https://github.com/NullVoxPopuli/ember-test-helpers-extra",
   "author": "NullVoxPopuli",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "scripts": {
+    "lint:js": "eslint .",
+    "clean": "rimraf lib",
+    "build:js": "babel src --out-dir lib --extensions \".ts\" --source-maps inline",
+    "build": "npx npm-run-all clean build:js"
+  },
+  "dependencies": {},
+  "peerDependencies": {
+    "@ember/test-helpers": ">=1.0.0",
+    "ember-source": ">=3.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/ember": "^3.1.0",
+    "@types/ember__test-helpers": "^0.7.8",
+    "@types/qunit": "^2.9.0",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
+    "babel-eslint": "^10.0.2",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.0",
+    "prettier": "^1.18.2",
+    "prettier-eslint": "^9.0.0",
+    "rimraf": "^2.6.3",
+    "typescript": "^3.5.3"
+  }
 }
