--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/ember": "^3.1.0",
     "@types/ember__test-helpers": "^0.7.8",
