ember-addon is a forbidden keyword for non-formal addons

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "private": false,
   "keywords": [
-    "embor",
-    "ember-addon"
+    "ember",
+    "testing"
   ],
   "scripts": {
     "lint:js": "eslint .",
